--- a/examples/2-way-binding.html
+++ b/examples/2-way-binding.html
@@ -6,7 +6,7 @@
   <!--[if lt IE 9]>
   <script type="text/javascript" src="../third-part/es5-shim.js"></script>
   <![endif]-->
-  <script type="text/javascript" src="../ant.js"></script>
+  <script type="text/javascript" src="../src/ant.js"></script>
 </head>
 <body>
 	<div id=template>
