字符串模板支持多节点

--- a/examples/2-way-binding.html
+++ b/examples/2-way-binding.html
@@ -50,7 +50,7 @@ document.body.onload = function(){
   var ant = new Ant(document.getElementById('template'), {
     data: {test:2, select2: ['cicada', 'bee']}
   , partials: {
-      partial: '<em>{{text}}</em>'
+      partial: '<em>{{text}}</em><pre>{{textarea}}</pre>'
     }
   });
   ;
