--- a/examples/2-way-binding.html
+++ b/examples/2-way-binding.html
@@ -11,7 +11,7 @@
 <body>
 	<div id=template>
     <form name=form0 action="test" method=get>
-    	<label>文本框: <input {{attr}} type="text" a-model=text /> </label>
+    	<label>文本框: <input {{password}} type="text" a-model=text /> </label>
     	<label>密码框: <input type="password" a-model=password /> </label>
     	<label>复选框: <input type="checkbox" name=cb a-model=checkbox /></label>
     	<label>单选框: </label>
