--- a/examples/backbase/index.html
+++ b/examples/backbase/index.html
@@ -23,7 +23,7 @@
   <div class='jumbotron'>
     <h1>Ant.js noBackend</h1>
     <p>
-      使用前端 MVW (Model - View - Whatever) 框架, 前台代码处理复杂的业务逻辑变得简单. 后台的作用可以仅限于提供服务, 认证及各类服务.
+      使用前端 MV* 类框架, 前台代码处理复杂的业务逻辑变得简单. 后台的作用可以仅限于提供数据, 认证及各类服务.
     </p>
   </div>
   <ul class='list-group'>
