--- a/examples/2-way-binding.html
+++ b/examples/2-way-binding.html
@@ -7,17 +7,27 @@
   <script type="text/javascript" src="../src/ant-es5-shim.js"></script>
   <![endif]-->
   <script type="text/javascript" src="../src/ant.js"></script>
+  <style>
+    label, .radio-box{
+      display:inline-block;
+      margin: 0 1em 1em;
+    }
+    .radio-box label{
+      display: inline;
+    }
+  </style>
 </head>
 <body>
 	<div id=template>
     <form name=form0 action="test" method=get>
     	<label>文本框: <input {{password}} type="text" a-model=text /> </label>
-    	<label>密码框: <input type="password" a-model=password /> </label>
+    	<label>密码框: <input {{checkbox:disabled}} type="password" a-model=password /> </label>
     	<label>复选框: <input type="checkbox" name=cb a-model=checkbox /></label>
-    	<label>单选框: </label>
-      <label>red: <input type="radio" a-model=radio value=red name=rd /></label>
-    	<label>blue: <input type="radio" checked a-model=radio value=blue name=rd /></label>
-    	<label>green: <input type="radio" a-model=radio value=green name=rd /></label>
+    	<div class='radio-box'>单选框: 
+        <label>red: <input type="radio" a-model=radio value=red name=rd /></label>
+        <label>blue: <input type="radio" checked a-model=radio value=blue name=rd /></label>
+        <label>green: <input type="radio" a-model=radio value=green name=rd /></label>
+      </div>
       <label>文本域: <textarea name=ta a-model=textarea>&lth1&gtunescape&lt/h1&gt</textarea></label>
       <label>下拉列表1: <select a-model=select1>
       		<option value="ant">ant</option>
@@ -32,18 +42,20 @@
       <label>下拉列表3: <select name=select3 a-model=select3>
       		<option a-repeat=select2 value="{{.}}">{{.}}</option>
         </select></label>
+    </form>
       <ul>
       	<li>文本框的值是: {{text}}</li>
       	<li>密码框的值是: {{password}}</li>
       	<li>复选框的值是: {{checkbox}}</li>
       	<li>单选框的值是: <span a-style="color:{{radio}}">{{radio}}</span></li>
-      	<li>文本域的值是: <pre>{{{textarea}}}</pre></li>
+      	<li>文本域的值是: {{{textarea}}}</li>
       	<li>下拉框1的值是: {{select1}}</li>
       	<li>下拉框2的值是: {{select2}}</li>
       	<li a-if=select3>下拉框3的值是: {{select3}}</li>
       </ul>
-      局部模板: {{> partial}} !
-    </form>
+      <div>
+        局部模板: {{> partial}}<!-- {{{> partial}}} --> !
+      </div>
   </div>
 <script type="text/javascript">
 document.body.onload = function(){
