ant.js instead of jekyll

--- a/learn/index.html
+++ b/learn/index.html
@@ -31,7 +31,7 @@
   <div id="loading"><h3>教程加载中<blink>....</blink></h3></div>
   <div class="container {{writeMode: write-mode}}">
     <div class=header>
-      <h1>Ant.js 使用教程</h1>
+      <h1><a href='http://antjs.org'>Ant.js</a> 使用教程</h1>
       <ul class="pager">
         <li id='prev-chapter' title='上一章' class='{{^hasPrevChapter:disabled}}'><a href="javascript:;">&lt;</a></li>
         <li>{{chapterIndex}} / {{tutorials.length}}</li>
