--- a/examples/recursive-list.html
+++ b/examples/recursive-list.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="../src/ant.js"></script>
 </head>
 <body>
+  <h1>Ant.js 中的嵌套数组: </h1>
 	<div id=template>
     <ul>
       <li a-repeat=province><span>{{name}}</span>
