vm.$$path 应该是字符串

--- a/index.html
+++ b/index.html
@@ -365,9 +365,8 @@
 </code></pre>
 <h2 id="%E4%BD%BF%E7%94%A8%E7%A4%BA%E4%BE%8B">使用示例</h2>
 <p><a href="https://github.com/antjs/ant.js/tree/master/examples">Github 代码库中</a> 提供了一些使用示例. </p>
-<p>而下面列举了一些在线示例: </p>
 <ul>
-<li><a href="learn/">ant.js 使用教程</a></li>
+<li><a href="learn/">使用 ant.js 编写的 ant.js 使用教程</a></li>
 <li><a href="examples/backbase/">noBackend 的实时评论系统</a></li>
 </ul>
 <h2 id="%E6%9B%B4%E6%96%B0%E6%97%A5%E5%BF%97">更新日志</h2>
