--- a/examples/backbase/index.html
+++ b/examples/backbase/index.html
@@ -5,6 +5,15 @@
 	<title>Ant.js noBackend</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" media="all" />
   <link rel="stylesheet" type="text/css" href="css/default.min.css" media="all" />
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-12642431-6', 'antjs.org');
+    ga('send', 'pageview');
+  </script>
   <style>
     .container{
       display:none;
