--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
 	<meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-	<title>Ant.js - 轻量级 HTML 数据驱动框架</title>
+  <meta name="keywords" content="template, data binding, two way binding, mdv, javascript, 双向绑定, 模板" />
+  <meta name="description" content="数据驱动 HTML 模板" />
+  <meta property="og:title" content="Ant.js" />
+  <meta property="og:description" content="数据驱动 HTML 模板" />
+  <meta property="og:url" content="http://antjs.org" />
+	<title>Ant.js - 数据驱动 HTML 模板</title>
   
   <link rel="stylesheet" href="docs/css/styles.css" />
   <link rel="stylesheet" href="docs/css/pygment_trac.css" />
@@ -32,7 +37,7 @@
 </ul>
 <h2 id="%E4%B8%8B%E8%BD%BD%E5%92%8C%E5%AE%89%E8%A3%85">下载和安装</h2>
 <ul>
-<li><a href="dist/ant.js">核心开发版</a> (36kb)</li>
+<li><a href="dist/ant.all.js">开发完整版</a></li>
 <li><a href="dist/ant.min.js">核心压缩版</a> (6kb Packed and gziped)</li>
 </ul>
 <p>在 NodeJs 中可以使用 npm 直接安装:</p>
@@ -376,17 +381,17 @@
 <li>邮件讨论组：<a href="mailto:antjs@librelist.com">antjs@librelist.com</a></li>
 </ul>
 <h2 id="%E6%9B%B4%E6%96%B0%E6%97%A5%E5%BF%97">更新日志</h2>
-<p>Version <strong><a href="http://htmlpreview.github.io/?https://github.com/antjs/ant.js/blob/v0.1.3/index.html">0.1.3</a></strong> -- 2013-10-24 -- <a href="https://github.com/antjs/ant.js/compare/v0.1.2...v0.1.3">diff</a></p>
+<p>Version <strong><a href="https://rawgithub.com/antjs/ant.js/v0.1.3/index.html">0.1.3</a></strong> -- 2013-10-24</p>
 <ul>
 <li>More Tests.</li>
 <li>Tests can run in node now, not only phantom.js.</li>
 <li>Two way binding for all editable element.</li>
 </ul>
-<p>Version <strong><a href="http://htmlpreview.github.io/?https://github.com/antjs/ant.js/blob/v0.1.2/index.html">0.1.2</a></strong> -- 2013-09-02</p>
+<p>Version <strong><a href="https://rawgithub.com/antjs/ant.js/v0.1.2/index.html">0.1.2</a></strong> -- 2013-09-02</p>
 <ul>
 <li>修复带有 <code>a-</code> 前缀属性导致程序报错的问题.</li>
 </ul>
-<p>Version <strong><a href="http://htmlpreview.github.io/?https://github.com/antjs/ant.js/blob/v0.1.1/index.html">0.1.1</a></strong> -- 2013-09-01</p>
+<p>Version <strong><a href="https://rawgithub.com/antjs/ant.js/v0.1.1/index.html">0.1.1</a></strong> -- 2013-09-01</p>
 <ul>
 <li>传入的对象数据将拷贝一份, 而不再作为引用值使用.</li>
 <li>实现了数组操作和 DOM 操作映射关系的精确同步. 包括:  <code>push</code>, <code>pop</code>, <code>shift</code>, <code>unshift</code>, <code>splice</code>, <code>reverse</code>.</li>
