getFilter and removeFilter

--- a/examples/2-way-binding.html
+++ b/examples/2-way-binding.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
 	<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Ant.js</title>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
