--- a/examples/filters.html
+++ b/examples/filters.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <h1>Filters in ant.js: </h1>
-	<div id=template><ul>
+	<div id=template>
     <div a-style='{{money | color}}'>
       You got {{ money | rmb }} !!  
     </div>
