--- a/index.html
+++ b/index.html
@@ -381,6 +381,9 @@
 <li>邮件讨论组：<a href="mailto:antjs@librelist.com">antjs@librelist.com</a></li>
 </ul>
 <h2 id="%E6%9B%B4%E6%96%B0%E6%97%A5%E5%BF%97">更新日志</h2>
+<ul>
+<li>Change <code>.setParital</code> argument <code>opts.node</code> to <code>opts.target</code>.</li>
+</ul>
 <p>Version <strong><a href="https://rawgithub.com/antjs/ant.js/v0.1.3/index.html">0.1.3</a></strong> -- 2013-10-24</p>
 <ul>
 <li>More Tests.</li>
