--- a/examples/2-way-binding.html
+++ b/examples/2-way-binding.html
@@ -4,16 +4,6 @@
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Ant.js</title>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-12642431-6', 'antjs.org');
-    ga('send', 'pageview');
-
-  </script>
   <!--[if lt IE 9]>
   <script type="text/javascript" src="../src/ant-es5-shim.js"></script>
   <![endif]-->
@@ -115,5 +105,16 @@ document.body.onload = function(){
   });
 }
 </script>
+  <script>
+  if(location.host){
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-12642431-6', 'antjs.org');
+    ga('send', 'pageview');
+  }
+  </script>
 </body>
 </html>
