--- a/examples/recursive-list.html
+++ b/examples/recursive-list.html
@@ -7,6 +7,7 @@
   <script type="text/javascript" src="../src/ant-es5-shim.js"></script>
   <![endif]-->
   <script type="text/javascript" src="../src/ant.js"></script>
+  <script type="text/javascript" src="../src/parse.js"></script>
 </head>
 <body>
   <h1>Ant.js 中的嵌套数组: </h1>
