--- a/test/index.html
+++ b/test/index.html
@@ -14,6 +14,7 @@
   <script type="text/javascript" src="../third-part/jquery.min.js"></script>
   <![endif]-->
   <script type="text/javascript" src="../src/ant.js"></script>
+  <script type="text/javascript" src="../src/parse.js"></script>
   <!--[if lt IE 8]>
   <script type="text/javascript" src="../third-part/json2.js"></script>
   <![endif]-->
