--- a/examples/array-maintain.html
+++ b/examples/array-maintain.html
@@ -6,8 +6,7 @@
   <!--[if lt IE 9]>
   <script type="text/javascript" src="../src/ant-es5-shim.js"></script>
   <![endif]-->
-  <script type="text/javascript" src="../src/ant.js"></script>
-  <script type="text/javascript" src="../src/parse.js"></script>
+  <script type="text/javascript" src="../dist/ant.js"></script>
   <script type="text/javascript" src="../third-part/jquery.min.js"></script>
   <script type="text/javascript" src="../src/event.js"></script>
   <style>
