--- a/examples/filters.html
+++ b/examples/filters.html
@@ -7,8 +7,7 @@
   <!--[if lt IE 9]>
   <script type="text/javascript" src="../src/ant-es5-shim.js"></script>
   <![endif]-->
-  <script type="text/javascript" src="../src/ant.js"></script>
-  <script type="text/javascript" src="../src/parse.js"></script>
+  <script type="text/javascript" src="../dist/ant.js"></script>
 </head>
 <body>
 	<div id=template a-style='{{money | color}}'>
