--- a/examples/router.html
+++ b/examples/router.html
@@ -14,7 +14,7 @@
 <script type="text/javascript" src="../src/ant-es5-shim.js"></script>
 <![endif]-->
 <script type="text/javascript" src="../third-part/jquery.min.js"></script>
-<script type="text/javascript" src="../src/ant.js"></script>
+<script type="text/javascript" src="../dist/ant.js"></script>
 <script type="text/javascript" src="../src/router.js"></script>
 <script>
 var router = Ant.router;
