--- a/test/index.html
+++ b/test/index.html
@@ -9,12 +9,11 @@
   <script type="text/javascript">
     mocha.setup('bdd');
   </script>
-  <!--[if lt IE 9]>
   <script type="text/javascript" src="../src/ant-es5-shim.js"></script>
+  <!--[if lt IE 9]>
   <script type="text/javascript" src="../third-part/jquery.min.js"></script>
   <![endif]-->
-  <script type="text/javascript" src="../src/ant.js"></script>
-  <script type="text/javascript" src="../src/parse.js"></script>
+  <script type="text/javascript" src="../dist/ant.js"></script>
   <!--[if lt IE 8]>
   <script type="text/javascript" src="../third-part/json2.js"></script>
   <![endif]-->
