--- a/examples/2-way-binding.html
+++ b/examples/2-way-binding.html
@@ -31,9 +31,10 @@
 	<div id=template>
     <h1>Ant.js 的双向绑定: </h1>
     <form name=form0 action="test" method=get>
+      {{ "{{" }} unescape }}
       <fieldset>
         <legend>普通文本框: </legend>
-        <label>文本框: <input {{password}} type="text" a-model={{text}} /> </label>
+        <label>文本框: <input {{password}} type="text" a-model={{text}} /> </label> <input type="text" value={{text}} />
         <label>密码框: <input {{checkbox&&"disabled"}} type="password" a-model={{password}} /> </label>
         <label>多行文本: <textarea name=ta a-model={{textarea}}>&ltem&gtwho is your daddy&lt/em&gt</textarea></label>
       </fieldset>
